apply plugin: 'java'
apply plugin: 'maven'

group = 'com.github.jearmstrong21'

sourceCompatibility = 8
targetCompatibility = 8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
}
